perubahan nama css js

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Bootsrap end -->
 
     <!-- css start -->
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/css/responsive.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="responsive.css" />
     <!-- css end -->
 
     <!-- google fonts start -->
@@ -74,7 +74,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/main.js"></script>
+    <script src="main.js"></script>
     <!-- script end -->
   </body>
 </html>
