--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span>Kamus UK.US</span>
         </div>
         <div class="navbar-right">
-          <img src="/assets/images/us_uk.png" alt="uk us flag" />
+          <img src="us_uk.png" alt="uk us flag" />
         </div>
       </nav>
       <!-- nav end -->
