--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Bootsrap end -->
 
     <!-- css start -->
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="responsive.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/responsive.css" />
     <!-- css end -->
 
     <!-- google fonts start -->
@@ -43,7 +43,7 @@
           <span>Kamus UK.US</span>
         </div>
         <div class="navbar-right">
-          <img src="us_uk.png" alt="uk us flag" />
+          <img src="/assets/us_uk.png" alt="uk us flag" />
         </div>
       </nav>
       <!-- nav end -->
