change navbar left

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- nav start -->
       <nav class="navbar">
         <div class="navbar-left">
-          <span>Kamus UK.US</span>
+          <span>UK.US Dictionary</span>
         </div>
         <div class="navbar-right">
           <img src="/assets/us_uk.png" alt="uk us flag" />
