--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Bootsrap end -->
 
     <!-- css start -->
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/css/responsive.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/responsive.css" />
     <!-- css end -->
 
     <!-- google fonts start -->
