Mengganti nama File assets

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span>UK.US Dictionary</span>
         </div>
         <div class="navbar-right">
-          <img src="/assets/us_uk.png" alt="uk us flag" />
+          <img src="assets/us_uk.png" alt="uk us flag" />
         </div>
       </nav>
       <!-- nav end -->
